--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^3.5.0",
     "@types/styled-components": "^5.1.15",
     "next": "12.0.4",
     "react": "17.0.2",
