--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@prisma/client": "^3.5.0",
+    "@types/express": "^4.17.13",
     "@types/styled-components": "^5.1.15",
     "next": "12.0.4",
     "react": "17.0.2",
