--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "@types/styled-components": "^5.1.15",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "swr": "^1.0.1"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "^16.11.10",
