--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/node": "^16.11.10",
     "@types/react": "17.0.37",
+    "babel-plugin-styled-components": "^2.0.2",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
     "prisma": "^3.5.0",
